[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/Frameworks/RequiredMod.gd" type="Script" id=1]

[node name="RequiredMod" type="HBoxContainer"]
margin_right = 296.0
margin_bottom = 105.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="Spacer" type="Control" parent="."]
margin_right = 5.0
margin_bottom = 113.0
rect_min_size = Vector2( 5, 0 )

[node name="Fields" type="VBoxContainer" parent="."]
margin_left = 9.0
margin_right = 258.0
margin_bottom = 113.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="Control" type="Control" parent="Fields"]
margin_right = 249.0
margin_bottom = 3.0
rect_min_size = Vector2( 0, 3 )

[node name="HeaderLabel" type="Label" parent="Fields"]
margin_top = 8.0
margin_right = 249.0
margin_bottom = 22.0
text = "Mod Name:"
valign = 1

[node name="ModNameText" type="LineEdit" parent="Fields"]
margin_top = 27.0
margin_right = 249.0
margin_bottom = 51.0

[node name="Control2" type="Control" parent="Fields"]
margin_top = 56.0
margin_right = 249.0
margin_bottom = 59.0
rect_min_size = Vector2( 0, 3 )

[node name="HeaderLabel2" type="Label" parent="Fields"]
margin_top = 64.0
margin_right = 249.0
margin_bottom = 78.0
text = "Mod Link:"
valign = 1

[node name="ModLinkText" type="LineEdit" parent="Fields"]
margin_top = 83.0
margin_right = 249.0
margin_bottom = 107.0

[node name="Divider" type="Control" parent="Fields"]
margin_top = 112.0
margin_right = 249.0
margin_bottom = 113.0
rect_min_size = Vector2( 0, 1 )
size_flags_horizontal = 3

[node name="DividerColor" type="ColorRect" parent="Fields/Divider"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 1 )
size_flags_horizontal = 3
color = Color( 0.278431, 0.278431, 0.278431, 1 )

[node name="Spacer4" type="Control" parent="."]
margin_left = 262.0
margin_right = 263.0
margin_bottom = 113.0
rect_min_size = Vector2( 1, 0 )
size_flags_vertical = 3

[node name="Delete" type="VBoxContainer" parent="."]
margin_left = 267.0
margin_right = 287.0
margin_bottom = 113.0

[node name="Spacer2" type="Control" parent="Delete"]
margin_right = 20.0
margin_bottom = 30.0
rect_min_size = Vector2( 10, 30 )

[node name="DeleteButton" type="Button" parent="Delete"]
margin_top = 34.0
margin_right = 20.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "X"

[node name="Spacer3" type="Control" parent="Delete"]
margin_top = 83.0
margin_right = 20.0
margin_bottom = 113.0
rect_min_size = Vector2( 10, 30 )

[node name="Spacer5" type="Control" parent="."]
margin_left = 291.0
margin_right = 296.0
margin_bottom = 113.0
rect_min_size = Vector2( 5, 0 )
size_flags_vertical = 3

[connection signal="pressed" from="Delete/DeleteButton" to="." method="_on_DeleteButton_pressed"]
